--- a/build.gradle
+++ b/build.gradle
@@ -11,15 +11,27 @@ repositories {
 sourceSets {
     main {
         java {
-            srcDirs = ['src']
+            srcDirs = ['src/main/java']
+        }
+        resources {
+            srcDirs = ['src/main/resources']
+        }
+    }
+    test {
+        java {
+            srcDirs = ['src/test/java']
+        } resources {
+            srcDirs = ['src/test/resources']
+
         }
     }
 }
 dependencies {
     implementation platform('org.junit:junit-bom:5.10.0')
     testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
 }
 
 test {
