--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+    // https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc
+    implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '12.8.1.jre11'
+
+
 }
 
 test {
